# spectral-io

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
data/spectral-io/candies/: black_ace_licorice.json
data/spectral-io/ceramics/: wallace_china.json
data/spectral-io/charts/: iscc-nbs_centroid_charts.json
data/spectral-io/cie/color_rendering/: cie_cfi_99_test_samples_1nm.json  cie_cfi_99_test_samples_5nm.json  cie_cqs_15_test_samples.json  cie_cri_14_test_samples.json  cie_four_colour_rygb.json  cie_japanese_skin_complexion.json
data/spectral-io/cie/illuminants/: cie_illum_daylight_components.json  cie_illum_fl_lamps_1nm.json  cie_illum_fl_lamps_5nm.json  cie_illum_hp_lamps.json  cie_illum_id50.json  cie_illum_id65.json  cie_illum_led_lamps_1nm.json  cie_illum_led_lamps_5nm.json  cie_std_illum_a.json  cie_std_illum_c.json  cie_std_illum_d50.json  cie_std_illum_d55.json  cie_std_illum_d65.json  (+1 more)
data/spectral-io/inks/: coors_thermochromic_ink.json
data/spectral-io/monitors/: apple_13_inch.json
data/spectrashop/charts/: ISCC-NBS Centroid Charts (5 samples).txt
data/spectrashop/inks/: Coors thermochromic ink.txt
examples/: apple_13_inch_monitor.json  apple_13_inch_monitor.txt  black_ace_licorice.json  black_ace_licorice.txt  cie_csv_to_json.rs  spectrashop_to_json.rs  wallace_china.json  wallace_china.txt
scripts/: example_batch.json  example_single.json  spectrum_file_schema.json  spectrum_file_validate.py
src/: csv_text.rs  lib.rs  python.rs  resample.rs  spectrashop.rs
tests/: cie_data.rs  spectrashop_data.rs
