[package]
name = "spectral-io"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "Read, write and validate optical spectral data files (UV-Vis, visible-range spectra)"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/spectral-io"
homepage = "https://github.com/harbik/spectral-io"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["spectral", "spectrometer", "colorimetry", "uvvis", "optical"]
categories = ["parser-implementations", "science", "encoding"]

[features]
default = ["spectrashop"]
spectrashop = []

[[example]]
name = "spectrashop_to_json"
required-features = ["spectrashop"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[package.metadata.docs.rs]
all-features = true
